concession-kiosk-policy-demo/network-policy/frontend/default-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: concession-kiosk-web
spec:
  podSelector: {}
  policyTypes:
  - Ingress
